router/traefik/3-deployment-clusterip.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: traefik-ingress
  name: traefik-clusterip
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      nodeSelector:
        kubernetes.io/hostname: "worker-3"
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.2
          args:
            - --api.insecure
            - --accesslog
            - --entrypoints.web.Address=:8000
            - --entrypoints.websecure.Address=:8443
            - --providers.kubernetescrd
          ports:
            - name: web
              containerPort: 8000
            - name: websecure
              containerPort: 8443
            - name: admin
              containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik-ingress
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 8000
      nodePort: 31800
    - protocol: TCP
      name: admin
      port: 8080
      nodePort: 31880
    - protocol: TCP
      name: websecure
      port: 4443
  selector:
    app: traefik
