router/traefik/4-traefik-ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-ui
  namespace: traefik-ingress
spec:
  selector:
    app: traefik
  ports:
  - name: web
    port: 80
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: traefik-ingress
spec:
  rules:
  - host: prod-traefik-ui.apps.okd-infra.wumi.ai
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-web-ui
          servicePort: web
